fix(communityposts): fix anonymous posts

--- a/src/app/card/communitypost-card/communitypost-card.component.html
+++ b/src/app/card/communitypost-card/communitypost-card.component.html
@@ -27,7 +27,7 @@
     <tr>
 
       <td align="left" [routerLink]="['/user', post.posted_by.id]" class="avatar clickable">
-        <ng-container *ngIf="post.anonymous; else non_anon">
+        <ng-container *ngIf="post.anonymous && post.status == 1; else non_anon">
           <img src="assets/anonymous_pic.jpg" class="img-circle object-cover" [ngStyle]="{ 'left.px': pic_offset }">
         </ng-container>
         <ng-template #non_anon>
@@ -42,8 +42,9 @@
       </td>
 
       <td class="user_date" [ngStyle]="{ 'left.px': name_offset }">
-        <p class="user clickable" [routerLink]="['/user', post.posted_by.id]">
-          {{ post.anonymous ? "Anonymous" : post.posted_by.name }}</p>
+        <p class="user clickable" [routerLink]="post.anonymous && post.status == 1?[]: ['/user', post.posted_by.id]">
+          {{ post.anonymous && post.status == 1 ? "Anonymous" : post.posted_by.name + (post.anonymous ? " (Anonymous)":"") }}
+        </p>
         <p class="date"> {{ printable_date }}</p>
       </td>
 
