--- a/src/app/page/group-details/group-details.component.html
+++ b/src/app/page/group-details/group-details.component.html
@@ -57,59 +57,60 @@
     </div>
     <div class="container join_button_cont">
       <ng-container *ngIf="group.is_user_following else join_state_btn">
-        <button class="join_button clickable" (click)=onJoinClicked() style="background-color:red;">
-          Leave
+        <button class="join_button clickable" (click)=onJoinClicked()
+          style="background-color:rgb(255, 255, 255); color:blue; border-color: #435FFE;">
+          JOINED
         </button>
       </ng-container>
       <ng-template #join_state_btn>
         <button class="join_button clickable" (click)=onJoinClicked() style="background-color: #435FFE;">
-          Join
+          JOIN
         </button>
       </ng-template>
     </div>
   </div>
-  
+
   <div class="container">
     <mat-tab-group mat-stretch-tabs class="tabs">
       <mat-tab label="About">
         <p class="tabText">{{group.description}}</p>
       </mat-tab>
       <mat-tab label="People">
-        
+
         <!-- hola -->
         <ng-container *ngFor="let role of group.roles">
-          
+
           <div class="role-container">
             <div class="role-name">{{ role.name }}</div>
             <app-user-card *ngFor="let user of role.users_detail" [profile]="user" role="">
             </app-user-card>
           </div>
-          
-          
+
+
         </ng-container>
-        
+
       </mat-tab>
-      
+
       <!-- <mat-tab label="third">
         <app-achievement-new *ngIf="!dataService.isMobile()"></app-achievement-new>
       </mat-tab> -->
-      
+
     </mat-tab-group>
 
   </div>
-  
-    <div class="featured-container">
-      <h4 style="padding-top: 9px; padding-bottom: 9px;  font-family: 'Roboto';
+
+  <div class="featured-container">
+    <h4 style="padding-top: 9px; padding-bottom: 9px;  font-family: 'Roboto';
       font-style: normal;
       font-weight: 500;
       font-size: 16px;">Featured</h4>
-      <div class="scroll-container featured-post-container ">
-        <ng-container *ngFor="let featured of featured_posts">
-          <app-communitypost-card [featured]="true" [post]="featured"></app-communitypost-card>
-  
-        </ng-container>
-      </div>
+    <div class="scroll-container featured-post-container ">
+      <ng-container *ngFor="let featured of featured_posts">
+        <app-communitypost-card [featured]="true" [post]="featured"></app-communitypost-card>
+
+      </ng-container>
     </div>
+  </div>
 
 </ng-template>
 
