highlight text in blogs

--- a/src/app/page/blog/blog.component.css
+++ b/src/app/page/blog/blog.component.css
@@ -4,6 +4,10 @@
     width: 90%;
 }
 
+::ng-deep .highlighted-text{
+    background-color: yellow;
+  }
+
 .feed-card {
     overflow: auto;
     font-size: 0.9em;
